crates/llvmkit-ir/tests/compile_fail/typed_function_params_reject_wrong_binding.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/typed_function_params_reject_wrong_binding.rs:12:50
   |
12 |         let (_lhs, _rhs): (FloatValue<f32>, _) = f.params();
   |                           --------------------   ^^^^^^^^^^ expected `(FloatValue<'_, f32>, _)`, found `(IntValue<'_, i32>, IntValue<'_, i32>)`
   |                           |
   |                           expected due to this
   |
   = note: expected tuple `(FloatValue<'_, f32>, _)`
              found tuple `(IntValue<'_, i32, Brand<'_>>, IntValue<'_, i32, Brand<'_>>)`
